--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary" class="app-toolbar">
   <mat-toolbar-row>
-    <span>RTC-Chat</span>
+    <span>WebRTC-Chat</span>
     <span class="app-toolbar-filler"></span>
-    <!--<mat-slide-toggle color="accent" [(ngModel)]="isDev">Dev Features</mat-slide-toggle>-->
+    <mat-slide-toggle color="accent" [(ngModel)]="isDev">Dev Features</mat-slide-toggle>
   </mat-toolbar-row>
 </mat-toolbar>
 
