--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -3,6 +3,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body {
-    font-family: Roboto, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
-    margin: 0;
+    font-family: Roboto,"Helvetica Neue",sans-serif;
+    margin: 4rem 0 0 0;
+    background: #f0f0f0;
 }
