--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -1,3 +1,8 @@
 .login-form-container {
-    height: calc(100vh - 4rem);
+    /*height: calc(100vh - 4rem);*/
+    height: 100vh;
+}
+
+.full-width {
+    display: block;
 }
