--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -1,6 +1,5 @@
 .login-form-container {
-    /*height: calc(100vh - 4rem);*/
-    height: 100vh;
+    height: calc(100vh - 4rem);
 }
 
 .full-width {
