Improve main page + sidenav

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,10 +1,18 @@
 .app-toolbar {
-    position: fixed;
-    top: 0;
-    z-index: 999;
-    box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
-  }
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
+}
 
 .app-toolbar-filler {
-    flex: 1 1 auto;
-  }
+  flex: 1 1 auto;
+}
+
+.app-content {
+  height: calc(100vh - 4rem);
+}
+
+.sidenav-item-selected {
+  background: rgba(0,0,0,.1) !important;
+}
