--- a/client/src/app/canvas/canvas.component.css
+++ b/client/src/app/canvas/canvas.component.css
@@ -10,3 +10,17 @@
     width: 100%;
     height: calc(100% - 4rem - 4px); /* no se de donde salen los 4px  */
 }
+
+.color-picker {
+    padding: 0;
+}
+
+.color-picker-item {
+    margin: .25rem;
+    border-radius: 50%;
+    height: 2rem;
+    width: 2rem;
+    font-size: 0;
+    display: inline-block;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+}
