add canvas Loading

--- a/client/src/app/canvas/canvas.component.css
+++ b/client/src/app/canvas/canvas.component.css
@@ -1,3 +1,9 @@
+.loading-wrapper {
+    position: absolute;
+    top: calc(50% - 50px);
+    left: calc(50% - 50px);
+}
+
 .mat-button {
     min-width: auto;
 }
