--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -14,8 +14,14 @@
     <mat-card-actions>
       <button mat-button color="primary" (click)="login(user.value, pass.value)">Entrar</button>
       <button mat-button (click)="register(user.value, pass.value)">Registrarse</button>
-      <button mat-button (click)="login('david', 'david')">David</button>
-      <button mat-button (click)="login('test', 'test')">Test</button>
+      <button mat-button [matMenuTriggerFor]="sampleUsersMenu">
+        <mat-icon [style.color]="colorFill">more_horiz</mat-icon>
+      </button>
+      <mat-menu #sampleUsersMenu>
+        <button *ngFor="let user of sampleUsers" mat-menu-item (click)="login(user, user)">{{user}}</button>
+      </mat-menu>
+
+      
     </mat-card-actions>
   </mat-card>
 </div>
