--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -14,9 +14,7 @@
     <mat-card-actions>
       <button mat-button color="primary" (click)="login(user.value, pass.value)">Entrar</button>
       <button mat-button (click)="register(user.value, pass.value)">Registrarse</button>
-      <button mat-button [matMenuTriggerFor]="sampleUsersMenu">
-        <mat-icon [style.color]="colorFill">more_horiz</mat-icon>
-      </button>
+      <button mat-button [matMenuTriggerFor]="sampleUsersMenu"><mat-icon>more_horiz</mat-icon></button>
       <mat-menu #sampleUsersMenu>
         <button *ngFor="let user of sampleUsers" mat-menu-item (tap)="login(user, user)">{{user}}</button>
       </mat-menu>
