--- a/client/src/app/about-page/about-page.component.html
+++ b/client/src/app/about-page/about-page.component.html
@@ -1,20 +1,10 @@
 <mat-card class="about-card">
-  <mat-card-header>
-    <mat-card-title>Información</mat-card-title>
-  </mat-card-header>
-  
   <mat-card-content>
-    <p>
-      Creado por David González García para la asignatura Difusión de Contenidos Multimedia Vía Web del Master en Ingeniería Web.
-    </p>
-    <p>
-      Puede consultar el código fuente en: <a href="https://github.com/davidglezz/MIW-DCMVW-MULTICHAT">https://github.com/davidglezz/MIW-DCMVW-MULTICHAT</a>
+    <h1>Información</h1>
+    <p>Creado por David González García para la asignatura Difusión de Contenidos Multimedia Vía Web del Master en Ingeniería
+      Web.</p>
+    <p>Puede consultar el código fuente en:
+      <a href="https://github.com/davidglezz/MIW-DCMVW-MULTICHAT">https://github.com/davidglezz/MIW-DCMVW-MULTICHAT</a>
     </p>
   </mat-card-content>
-  <!--<mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>-->
 </mat-card>
-
-
