--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -25,7 +25,7 @@
         <span mat-line>Lienzo compartido</span>
       </a>
       <mat-divider></mat-divider>
-      <h3 matSubheader>Usuarios Conectados</h3>
+      <h3 matSubheader>Usuarios</h3>
       <app-user-list></app-user-list>
       <mat-divider></mat-divider>
       <h3 matSubheader>About</h3>
